--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /test-reports
 /test-results
 app/google-services.json
+/app/src/main/res/values/refs.xml
+/app/src/androidTest/java/com/smouldering_durtles/wk/test/UnitTestSuite.java
