Added fastline metadata

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 app/google-services.json
 /app/src/main/res/values/refs.xml
 /app/src/androidTest/java/com/smouldering_durtles/wk/test/UnitTestSuite.java
+/fastlane/smoulderingdurtles.json
