--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,8 @@ android {
 
 dependencies {
     implementation 'junit:junit:4.13.2'
+    implementation 'androidx.activity:activity-ktx:1.6.0'
+    implementation 'androidx.fragment:fragment-ktx:1.3.6'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
 
     annotationProcessor 'androidx.room:room-compiler:2.6.1'
