Fixed issue with uri_scheme and about_label string preventing F-Droid build

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,9 @@ android {
             resValue 'string', 'fileprovider_authority', 'com.smouldering_durtles.wk.fileprovider'
             resValue 'string', 'searchprovider_authority', 'com.smouldering_durtles.wk.db.SubjectContentProvider'
             resValue 'string', 'applabel', 'Smouldering Durtles'
+            resValue 'string', 'about_label', 'About Smouldering Durtles'
+            resValue 'string', 'url_scheme', 'smouldering-durtles'
+            resValue 'string', 'subject_info_uri', 'smouldering-durtles://subejct-info'
             buildConfigField 'String', 'FILEPROVIDER_AUTHORITY', '"com.smouldering_durtles.wk.fileprovider"'
             signingConfig signingConfigs.debug
         }
@@ -37,6 +40,9 @@ android {
             resValue 'string', 'fileprovider_authority', 'com.smouldering_durtles.wk.debug.fileprovider'
             resValue 'string', 'searchprovider_authority', 'com.smouldering_durtles.wk.debug.db.SubjectContentProvider'
             resValue 'string', 'applabel', 'Smouldering Durtles - Debug'
+            resValue 'string', 'about_label', 'About Smouldering Durtles'
+            resValue 'string', 'url_scheme', 'smouldering-durtles'
+            resValue 'string', 'subject_info_uri', 'smouldering-durtles://subejct-info'
             buildConfigField 'String', 'FILEPROVIDER_AUTHORITY', '"com.smouldering_durtles.wk.debug.fileprovider"'
         }
     }
