--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ android {
             resValue 'string', 'searchprovider_authority', 'com.smouldering_durtles.wk.db.SubjectContentProvider'
             resValue 'string', 'applabel', 'Smouldering Durtles'
             resValue 'string', 'about_label', 'About Smouldering Durtles'
-            resValue 'string', 'url_scheme', 'smouldering-durtles'
+            resValue 'string', 'uri_scheme', 'smouldering-durtles'
             resValue 'string', 'subject_info_uri', 'smouldering-durtles://subejct-info'
             buildConfigField 'String', 'FILEPROVIDER_AUTHORITY', '"com.smouldering_durtles.wk.fileprovider"'
             signingConfig signingConfigs.debug
@@ -41,7 +41,7 @@ android {
             resValue 'string', 'searchprovider_authority', 'com.smouldering_durtles.wk.debug.db.SubjectContentProvider'
             resValue 'string', 'applabel', 'Smouldering Durtles - Debug'
             resValue 'string', 'about_label', 'About Smouldering Durtles'
-            resValue 'string', 'url_scheme', 'smouldering-durtles'
+            resValue 'string', 'uri_scheme', 'smouldering-durtles'
             resValue 'string', 'subject_info_uri', 'smouldering-durtles://subejct-info'
             buildConfigField 'String', 'FILEPROVIDER_AUTHORITY', '"com.smouldering_durtles.wk.debug.fileprovider"'
         }
