--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,8 +56,23 @@ android {
     buildFeatures {
         buildConfig true
     }
-}
+    dependenciesInfo {
+        // Disables dependency metadata when building APKs.
+        includeInApk = false
+        // Disables dependency metadata when building Android App Bundles.
+        includeInBundle = false
+    }
 
+    aaptOptions {
+        cruncherEnabled = false
+    }
+
+    defaultConfig {
+        vectorDrawables.generatedDensities = []
+    }
+
+
+}
 
 dependencies {
     implementation 'junit:junit:4.13.2'
